Bug 472727 - Standalone KRunner has wrong colors with mismatched Plasma and app color schemes
Summary: Standalone KRunner has wrong colors with mismatched Plasma and app color schemes
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-07-28 04:32 UTC by Nate Graham
Modified: 2024-02-03 19:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Wrong text color (82.98 KB, image/jpeg)
2023-07-28 04:32 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-07-28 04:32:37 UTC
Created attachment 160575 [details]
Wrong text color

STEPS TO REPRODUCE
1. Use Breeze Twilight Global theme, or else manually set Breeze Dark Plasma style and Breeze Light color scheme
2. Open KRunner


OBSERVED RESULT
Dark text on dark background. See attached screenshot


EXPECTED RESULT
Light text on dark background


ADDITIONAL INFORMATION
Does not affect the Milou widget, so perhaps the here is that the standalone KRunner binary is missing the magic engine property to use the Kirigami Plasma style plugin. See https://invent.kde.org/plasma/kscreen/-/commit/2f824de4550fbde576159867a5b782502d7c79e2 for details.
Comment 1 Marco Martin 2023-07-31 16:08:37 UTC
Git commit 000f3c875f329102b5ac443806f5291f804a244d by Marco Martin.
Committed on 31/07/2023 at 18:08.
Pushed by mart into branch 'master'.

Use the kirigami Plasma style in krunner

also in krunner since uses the plasma theme, set the property
to load the proper kirigami theme plugin

M  +1    -0    krunner/view.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/000f3c875f329102b5ac443806f5291f804a244d