Use the kirigami Plasma style in krunner

also in krunner since uses the plasma theme, set the property
to load the proper kirigami theme plugin

BUG:472727